--- a/WebApp/src/app/features/attendance/roster-policy/roster-policy.component.html
+++ b/WebApp/src/app/features/attendance/roster-policy/roster-policy.component.html
@@ -1,1 +1,162 @@
-<p>roster-policy works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+
+            <h4>Roster Policy</h4>
+            <div [hidden]="formDisplay">
+
+                <form action="" [formGroup]="rosterPolicyForm">
+
+                    <div class="col-12">
+                        <div class="p-fluid p-formgrid grid">
+
+
+
+
+                            <div class="field form-group col-12 md:col-6">
+                                <label pTooltip="Roster Name" tooltipPosition="top">Roster Name<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="roster_policy_name"
+                                       [ngClass]="{ 'is-invalid': submitted && f.roster_policy_name.errors }"
+                                       pInputText required />
+
+                                <div *ngIf="submitted && f.roster_policy_name.errors" class="invalid-feedback">
+                                    <small *ngIf="f.roster_policy_name.errors.required" class="p-error">Roster name is required</small>
+
+                                </div>
+                            </div>
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Roster Cycle" tooltipPosition="top">Roster Cycle<span class="req">*</span></label>
+                                <p-dropdown [options]="allRosterCycle" [(ngModel)]="selectedRostercycle" formControlName="roster_cycle" [ngClass]="{ 'is-invalid': submitted && f.roster_cycle.errors }" placeholder="Select Roster Cycle"
+                                            optionLabel="name" optionValue="roster_cycle" [showClear]="true"></p-dropdown>
+
+                                <div *ngIf="submitted && f.roster_cycle.errors" class="invalid-feedback">
+                                    <small *ngIf="f.roster_cycle.errors.required" class="p-error">Roster cycle is required</small>
+                                </div>
+                            </div>
+
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Shift" tooltipPosition="top">Shift<span class="req">*</span></label>
+                                <p-dropdown [options]="allShifts" [(ngModel)]="selectedShift" formControlName="shift_id" [ngClass]="{ 'is-invalid': submitted && f.shift_id.errors }" placeholder="Select Shift"
+                                            optionLabel="shift_name" [showClear]="true"></p-dropdown>
+
+                            
+                            </div>
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Next Shift" tooltipPosition="top">Next Shift<span class="req">*</span></label>
+                                <p-dropdown [options]="allShifts" [(ngModel)]="selectedNextShift" formControlName="next_shift_id" [ngClass]="{ 'is-invalid': submitted && f.next_shift_id.errors }" placeholder="Select Next Shift"
+                                            optionLabel="shift_name"  [showClear]="true"></p-dropdown>
+
+                         
+                            </div>
+                            <div class="field col-12 md:col-12 text-right">
+
+                                <button class=" pi pi-plus risBtn risAdd mr-2" (click)="addRosterDetails()" label="Add">Add</button>
+
+
+                            </div>
+
+                            <div class="field col-12 md:col-12 ">
+                                <p-table [value]="rosterDetails" styleClass="p-datatable-striped p-datatable-sm" responsiveLayout="scroll">
+
+                                    <ng-template pTemplate="header">
+                                        <tr>
+                                            <th>#SL</th>
+
+                                            <th>Shift</th>
+                                            <th>Next Shift</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </ng-template>
+                                    <ng-template pTemplate="body" let-rowIndex="rowIndex" let-slab>
+
+                                        <tr>
+                                            <td>{{rowIndex+1}}</td>
+
+                                            <td>{{slab.shift_name}}</td>
+
+                                            <td>{{slab.next_shift_name}}</td>
+                                            <td> <button class="pi pi-times-circle risBtn risDelete" (click)="removeEvent(rowIndex,slab)"> </button></td>
+
+                                        </tr>
+                                    </ng-template>
+                                </p-table>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <p-dialog header="Approve Record" [(visible)]="displayApprove" [style]="{width: '35vw'}">
+                        <p>Do you want to approve this record?</p>
+                        <ng-template pTemplate="footer">
+                            <button class="pi pi-times risBtn risClose" (click)="displayApprove=false"> No</button>
+                            <button class="pi pi-check risBtn risSave" (click)="policyApprove()"> Yes</button>
+                        </ng-template>
+                    </p-dialog>
+
+
+
+                    <div class="flex justify-content-end pr-2">
+                        <button pButton pRipple type="button" label="Save" (click)="saveRosterPolicy()" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
+                        <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+                    </div>
+
+
+
+
+
+
+                </form>
+
+
+
+
+            </div>
+
+            <!--end form display------------->
+
+            <div [hidden]="gridDisplay">
+                <button pButton pRipple type="button" label="New" (click)="showBasicDialog()" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" label="Edit" (click)="loadRosterPolicyToEdit()" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button"  class="pi pi-trash risBtn risDelete mr-2 mb-2" (click)="showDialog()"> Delete</button>
+                <button pButton pRipple type="button"  class="pi pi-box risBtn risAll mr-2 mb-2"> Activity</button>
+                <button pButton pRipple type="button"  class="pi pi-box risBtn risAll mr-2 mb-2" (click)="approveConfirm()"> Approve</button>
+
+                <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
+                    <p>Do you want to delete this record?</p>
+                    <ng-template pTemplate="footer">
+                        <button class="pi pi-check risBtn risSave" (click)="deleteRoster()"> Yes</button>
+                        <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
+                    </ng-template>
+                </p-dialog>
+
+                <p-table [value]="rosterPolicies" styleClass="p-datatable-striped p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedPolicy" dataKey="roster_policy_id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Roster Name</th>
+                            <th>Cycle</th>
+                            <th>Approve</th>
+                            <th>Activity</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-roster>
+                        <tr [pSelectableRow]="roster">
+                    
+                            <td>{{roster.roster_policy_name}}</td>
+                            <td>{{roster.roster_cycle}}</td>
+                            <td>{{roster.approvedBy}}</td>
+                            <td *ngIf="roster.is_active===true">{{"Active"}}</td>
+                            <td *ngIf="roster.is_active===false">{{"InActive"}}</td>
+
+                        </tr>
+                    </ng-template>
+
+                </p-table>
+                <!--end grid display -------------->
+            </div>
+
+
+
+        </div>
+    </div>
+</div>
