--- a/WebApp/src/app/features/administrative/company/company.component.html
+++ b/WebApp/src/app/features/administrative/company/company.component.html
@@ -254,9 +254,9 @@
             <!--end form display------------->
 
             <div [hidden]="gridDisplay">
-                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" class="risBtn risAdd mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="loadCompanyToEdit()" label="Edit" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" class="risBtn risDelete mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadCompanyToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
                     <ng-template pTemplate="footer">
@@ -265,7 +265,7 @@
                     </ng-template>
                 </p-dialog>
 
-                <p-table [value]="companys" styleClass="p-datatable-striped p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                <p-table [value]="companys" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
                          [(selection)]="selectedCompany" dataKey="company_id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
                     <ng-template pTemplate="header">
                         <tr>
