--- a/WebApp/src/assets/ext-style.css
+++ b/WebApp/src/assets/ext-style.css
@@ -205,3 +205,25 @@
 .md\:col-6 {
     padding: 1rem 1rem 0 0 !important;
 }
+
+/*Start tab padding----------*/
+.p-tabview .p-tabview-nav li .p-tabview-nav-link{
+    padding: .8rem;
+}
+.layout-wrapper.layout-static .layout-main-container {
+    /*margin-left:258px!important;*/
+}
+.layout-main-container{
+    padding:6rem 1rem 2rem 1rem!important;
+}
+.layout-menu li a.router-link-exact-active {
+    color: aqua !important;
+    background-color: #1a3a56;
+}
+.layout-menu li a:focus{
+    box-shadow:none!important;
+
+}
+.layout-menu li a{
+    border-radius:0!important;
+}
