company group done

--- a/WebApp/src/app/features/administrative/company/company.component.html
+++ b/WebApp/src/app/features/administrative/company/company.component.html
@@ -243,6 +243,7 @@
                                 </div>
                             </div>
                             <div class="flex justify-content-end pr-2">
+                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn risAdd mr-2 mb-2" icon="pi pi-step-backward"></button>
                                 <button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
                                 <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                             </div>
