--- a/WebApp/src/app/features/administrative/company/company.component.html
+++ b/WebApp/src/app/features/administrative/company/company.component.html
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                             <div class="flex justify-content-end pr-2">
-                                <button pButton pRipple type="button" (click)="onGeneral()" label="Next" class="risBtn risSave mr-2 mb-2" icon="pi pi-step-forward"></button>
+                                <button pButton pRipple type="button" (click)="onGeneral()" label="Next" class="risBtn  mr-2 mb-2" icon="pi pi-step-forward"></button>
                                 <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                             </div>
                         </p-tabPanel>
@@ -155,8 +155,8 @@
                                 </div>
                             </div>
                             <div class="flex justify-content-end pr-2">
-                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn risSave mr-2 mb-2" icon="pi pi-step-backward"></button>
-                                <button pButton pRipple type="button" (click)="onAddress()" label="Next" class="risBtn risSave mr-2 mb-2" icon="pi pi-step-forward"></button>
+                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn  mr-2 mb-2" icon="pi pi-step-backward"></button>
+                                <button pButton pRipple type="button" (click)="onAddress()" label="Next" class="risBtn  mr-2 mb-2" icon="pi pi-step-forward"></button>
                                 <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                             </div>
                         </p-tabPanel>
@@ -182,8 +182,8 @@
                                 </div>
                             </div>
                             <div class="flex justify-content-end pr-2">
-                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn risSave mr-2 mb-2" icon="pi pi-step-backward"></button>
-                                <button pButton pRipple type="button" (click)="openNext()" label="Next" class="risBtn risSave mr-2 mb-2" icon="pi pi-step-forward"></button>
+                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn  mr-2 mb-2" icon="pi pi-step-backward"></button>
+                                <button pButton pRipple type="button" (click)="openNext()" label="Next" class="risBtn  mr-2 mb-2" icon="pi pi-step-forward"></button>
                                 <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                             </div>
                         </p-tabPanel>
@@ -243,7 +243,7 @@
                                 </div>
                             </div>
                             <div class="flex justify-content-end pr-2">
-                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn risAdd mr-2 mb-2" icon="pi pi-step-backward"></button>
+                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn mr-2 mb-2" icon="pi pi-step-backward"></button>
                                 <button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
                                 <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                             </div>
