--- a/WebApp/src/app/features/attendance/roster-policy/roster-policy.component.html
+++ b/WebApp/src/app/features/attendance/roster-policy/roster-policy.component.html
@@ -80,7 +80,7 @@
                                             <td>{{slab.shift_name}}</td>
 
                                             <td>{{slab.next_shift_name}}</td>
-                                            <td> <button class="pi pi-times-circle risBtn risDelete" (click)="removeEvent(rowIndex,slab)"> </button></td>
+                                            <td> <button  pButton pRipple type="button" icon="pi pi-times-circle" class="risBtn risDelete" (click)="removeEvent(rowIndex,slab)"> </button></td>
 
                                         </tr>
                                     </ng-template>
