--- a/WebApp/src/app/features/attendance/leave-policy/leave-policy.component.html
+++ b/WebApp/src/app/features/attendance/leave-policy/leave-policy.component.html
@@ -1,1 +1,153 @@
-<p>leave-policy works!</p>
+<div class="grid ">
+    <div class="col-12 ">
+        <div class="card">
+
+            <h4>Leave Policy</h4>
+            <div [hidden]="formDisplay">
+
+                <form action="" [formGroup]="leavePolicyForm">
+
+                    <div class="col-12">
+                        <div class="p-fluid p-formgrid grid md:pl-5 md:pr-5">
+
+
+
+
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Roster Name" tooltipPosition="top">Name<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="leave_policy_name"
+                                       [ngClass]="{ 'is-invalid': submitted && f.leave_policy_name.errors }"
+                                       pInputText required />
+
+                                <div *ngIf="submitted && f.leave_policy_name.errors" class="invalid-feedback">
+                                    <small *ngIf="f.leave_policy_name.errors.required" class="p-error">Leave Policy name is required</small>
+
+                                </div>
+                            </div>
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Roster Name" tooltipPosition="top">Code<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="code" pInputText />
+
+                            </div>
+
+                            <div class="field col-12 md:col-12 pl-0">
+                                <label pTooltip="Roster Name" tooltipPosition="top">Remarks<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="code" pInputText />
+
+                            </div>
+                            <div class=" col-12 md:col-12 pl-0">
+                                <div class="field-checkbox mb-0">
+                                    <p-checkbox name="group1" value="Chicago" id="ch"></p-checkbox>
+                                    <label for="ch">Calculate all leaves proportionately as per date of join or confirmation date. </label>
+                                </div>
+                            </div>
+                            <div class="field col-12 md:col-6 ">
+
+                                <label pTooltip="Next Shift" tooltipPosition="top">Leave<span class="req">*</span></label>
+                                <p-dropdown [options]="allShifts" [(ngModel)]="selectedNextShift" formControlName="next_shift_id" [ngClass]="{ 'is-invalid': submitted && f.next_shift_id.errors }" placeholder="Select Leave"
+                                            optionLabel="shift_name" [showClear]="true"></p-dropdown>
+
+
+                            </div>
+
+                            <div class="field form-group col-12 md:col-6">
+                                <label pTooltip="Roster Name" tooltipPosition="top">Description<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="code" pInputText />
+
+                            </div>
+                           
+                            <div class="field form-group col-12 md:col-4 ">
+
+                                <label pTooltip="Roster Name" tooltipPosition="top">Default Balance<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="code" pInputText />
+
+                            </div>
+                            <div class="field form-group col-12 md:col-2 pl-0">
+
+                                <label pTooltip="Roster Name" tooltipPosition="top"><span class="req"></span> </label>
+                                <p>Days</p>
+
+                            </div>
+                            <div class="field form-group col-12 md:col-4 pl-0">
+
+                                <label pTooltip="Roster Name" tooltipPosition="top">Max enjoyable limit<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" class="from-control" formControlName="code" pInputText />
+
+                            </div>
+                            <div class="field form-group col-12 md:col-1 pl-0">
+
+                                <label pTooltip="Roster Name" tooltipPosition="top"><span class="req"></span> </label>
+                                <p>Days   or</p>
+
+                            </div>
+                            <div class="field form-group col-12 md:col-1 pl-0">
+                                <div class="field-checkbox mb-0">
+                                    <p-checkbox name="group1" value="Chicago" id="ch"></p-checkbox>
+                                    <label for="ch">All</label>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="flex justify-content-end md:pl-5 md:pr-5">
+                            <button pButton pRipple type="button" label="Save" (click)="saveRosterPolicy()" class="risBtn risSave mr-2 mb-2 mt-2" icon="pi pi-check"></button>
+                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2 mt-2" icon="pi pi-times"></button>
+                        </div>
+                    </div>
+
+
+                </form>
+
+            </div>
+
+            <!--end form display------------->
+
+            <div [hidden]="gridDisplay">
+                <button pButton pRipple type="button" label="New" (click)="showBasicDialog()" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" label="Edit" (click)="loadRosterPolicyToEdit()" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2" (click)="deleteModal($event)"> </button>
+                <button pButton pRipple type="button" label="Activity" icon="pi pi-box" class="risBtn risAll mr-2 mb-2"> </button>
+                <button pButton pRipple type="button" label="Approve" icon="pi pi-box" class="risBtn risAll mr-2 mb-2" (click)="approveModal($event)"> </button>
+                <button pButton pRipple type="button" label="Copy" icon="pi pi-copy" class="risBtn risAll mr-2 mb-2" (click)="approveModal($event)"> </button>
+                <p-confirmPopup key="approve"></p-confirmPopup>
+                <p-confirmPopup key="delete"></p-confirmPopup>
+
+                <p-table [value]="leavePolicies" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
+                         [(selection)]="selectedPolicy" dataKey="leave_policy_id" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Policy Name</th>
+                            <th>Remarks</th>
+                            <th>Leave</th>
+                            <th>Total Leave</th>
+                            <th>Activation</th>
+                            <th>Max enjoyable limit</th>
+                            <th>Activity</th>
+                            <th>Approve</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-roster>
+                        <tr [pSelectableRow]="roster">
+
+                            <td>{{roster.leave_policy_name}}</td>
+                            <td>{{roster.remarks}}</td>
+                            <td>{{roster.leave}}</td>
+                            <td>{{roster.totalleave}}</td>
+                            <td>{{roster.activation}}</td>
+                            <td>{{roster.maxenjoyable}}</td>
+                            <td *ngIf="roster.is_active===true">{{"Active"}}</td>
+                            <td *ngIf="roster.is_active===false">{{"InActive"}}</td>
+                            <td>{{roster.approvedBy}}</td>
+
+
+                        </tr>
+                    </ng-template>
+
+                </p-table>
+                <!--end grid display -------------->
+            </div>
+
+
+
+        </div>
+    </div>
+</div>
