--- a/WebApp/src/app/features/administrative/bank/bank.component.html
+++ b/WebApp/src/app/features/administrative/bank/bank.component.html
@@ -147,20 +147,15 @@
                         </p-tabPanel>
 
                     </p-tabView>
-
-                    <ng-template pTemplate="footer">
-                        <button type="submit" class="pi pi-save risBtn risSave" (click)="onFormSubmit()"> Save</button>
-                        <button class="pi pi-times risBtn risClose" (click)="displayBasic=false"> Close</button>
-                    </ng-template>
                 </form>
             </div>
 
             <!--end form display------------->
 
             <div [hidden]="gridDisplay">
-                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" class="risBtn risAdd mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="loadBankToEdit()" label="Edit" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" class="risBtn risDelete mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadBankToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
                     <ng-template pTemplate="footer">
