--- a/WebApp/src/app/features/administrative/registry-authority/registry-authority.component.html
+++ b/WebApp/src/app/features/administrative/registry-authority/registry-authority.component.html
@@ -1,13 +1,102 @@
-<div class="p-card">
+<div class="grid">
+    <div class="col-12">
+        <div class="card">
+            <h4>Registry Authority</h4>
+            <div [hidden]="formDisplay">
+                <form action="" [formGroup]="registryAuthorityForm">
+                    <div class="col-12">
+                        <div class="p-fluid p-formgrid grid">
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Country" tooltipPosition="top">Country<span class="req">*</span></label>
+                                <p-dropdown [options]="allCountry" formControlName="country_id" [ngClass]="{ 'is-invalid': submitted && f.country_id.errors }" placeholder="---Select---"
+                                            optionLabel="country_name" optionValue="country_id" [showClear]="true" [filter]="true" filterBy="country_name"></p-dropdown>
 
+                                <div *ngIf="submitted && f.country_id.errors" class="invalid-feedback">
+                                    <small *ngIf="f.country_id.errors.required" class="p-error">Country is required</small>
+                                </div>
+                            </div>
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Registry Authority Name" tooltipPosition="top"> Name<span class="req">*</span> </label>
+                                <input id="lastname2" type="text" formControlName="registry_authority_name"
+                                       [ngClass]="{ 'is-invalid': submitted && f.registry_authority_name.errors }"
+                                       placeholder="" pInputText required />
+
+                                <div *ngIf="submitted && f.registry_authority_name.errors" class="invalid-feedback">
+                                    <small *ngIf="f.registry_authority_name.errors.required" class="p-error">Registry Authority is required</small>
+                                </div>
+                            </div>
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Registry Authority Short Name" tooltipPosition="top">Short Name </label>
+                                <input id="lastname2" type="text" formControlName="registry_authority_short_name" placeholder="" pInputText />
+                            </div>
+                            <div class="field col-12 md:col-6">
+                                <label pTooltip="Remarks" tooltipPosition="top">Remarks </label>
+                                <input id="lastname2" type="text" formControlName="remarks" placeholder="" pInputText />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-content-end pr-2">
+                        <button pButton pRipple type="button" (click)="onFormSubmit()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
+                        <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+                    </div>
+                </form>
+            </div>
+
+            <!--end form display------------->
+
+            <div [hidden]="gridDisplay">
+
+                <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadRegistryAuthorityToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+
+                <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
+                    <p>Do you want to delete this record?</p>
+                    <ng-template pTemplate="footer">
+                        <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
+                        <button class="pi pi-check risBtn risSave" (click)="deleteRegistryAuthorityInfo()"> Yes</button>
+                    </ng-template>
+                </p-dialog>
+                <p-table [value]="registryAuthoritys" dataKey="registry_authority_id" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedRegistryAuthority" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
+                         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Registry Authority Name</th>
+                            <th>Short Name</th>
+                            <th>Country Name</th>
+                            <th>Remarks</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-registryAuthority>
+                        <tr [pSelectableRow]="registryAuthority">
+                            <td>{{registryAuthority.registry_authority_name}}</td>
+                            <td>{{registryAuthority.registry_authority_short_name}}</td>
+                            <td>{{registryAuthority.country_name}}</td>
+                            <td>{{registryAuthority.remarks}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+                <!--end grid display -------------->
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!------------------@@@@@@@@@@@@@@@@@@@@@@@@@----------------->
+
+<!--<div class="p-card">
     <div class="me-auto">
         <div class="p-card-title ">
             <span class="pi pi-registryAuthoritys"> </span> Registry Authority
         </div>
-        <div class="p-card-body">
+        <div class="p-card-body">-->
             <!-- ********** start card body ******************** -->
 
-            <div class="card">
+            <!--<div class="card">
                 <div class="grid mb-2">
                     <button class="pi pi-plus risBtn risAdd mr-2" (click)="showBasicDialog()"> New</button>
                     <button class="pi pi-pencil risBtn risEdit mr-2" (click)="loadRegistryAuthorityToEdit()"> Edit</button>
@@ -82,9 +171,9 @@
                             <button type="submit" class="pi pi-save risBtn risSave" (click)="onFormSubmit()"> Save</button>
                             <button class="pi pi-times risBtn risClose" (click)="displayBasic=false"> Close</button>
                         </ng-template>
-                    </p-dialog>
+                    </p-dialog>-->
                     <!-- ************************start grid ************************ -->
-                    <p-table [value]="registryAuthoritys" dataKey="registry_authority_id" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedRegistryAuthority" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
+                    <!--<p-table [value]="registryAuthoritys" dataKey="registry_authority_id" [paginator]="true" [rows]="10" selectionMode="single" [(selection)]="selectedRegistryAuthority" [showCurrentPageReport]="true" responsiveLayout="scroll" styleClass="p-datatable-striped p-datatable-sm"
                              currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
 
                         <ng-template pTemplate="header">
@@ -105,12 +194,12 @@
                             </tr>
                         </ng-template>
                     </p-table>
-                </div>
+                </div>-->
 
                 <!-- ********** end card body ******************** -->
 
-            </div>
+            <!--</div>
         </div>
     </div>
-</div>
+</div>-->
 
